Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -153,7 +153,7 @@
                 <p class="event listening">NO CONNECTED TO DEVICE</p>
                 <p class="event received">DEVICE READY</p>
             </div>
-            <div id="editPanel">
+            <div id="editPanel" class="editPanel">
              <button onclick="getContent('www/index.html')">HTML</button>
              <button onclick="getContent('www/css/index.css')">CSS</button>
              <button onclick="getContent('www/js/index.js')">JS</button>
