Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -147,6 +147,7 @@
 
         function goEdit(){
           $("#editPanel").css ("display","block");
+          $("#editBtn").html("Run");
         }
         </script>
     </head>
