Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -146,7 +146,7 @@
         }
 
         function goEdit(){
-         if ($("#editBtn").caption() == "Edit"){
+         if ($("#editBtn").html() == "Edit"){
           $("#editPanel").css ("display","block");
           $("#editBtn").html("Run");
          } else {
