Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -183,7 +183,7 @@
             </div>
             <div id="runPanel">
                 <input id="cmdInput"></input>
-                <button onclick="doProcess()">Process</button>
+                <button class="btn btn-success" onclick="doProcess()">Process</button>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
