--- a/www/index.html
+++ b/www/index.html
@@ -173,16 +173,16 @@
                <button onclick="getContent('www/index.html')">HTML</button>
                <button onclick="getContent('www/css/index.css')">CSS</button>
                <button onclick="getContent('www/js/index.js')">JS</button><br/>
-               <button onclick="getContent('www/config.xml')">
+               <button class="btn btn-default" onclick="getContent('www/config.xml')">
                  <span class="glyphicon glyphicon-wrench " aria-hidden="true"></span>
                </button>
-               <button onclick="updateContent()">
+               <button class="btn btn-default" onclick="updateContent()">
                  <span class="glyphicon glyphicon-save " aria-hidden="true"></span>
                </button>
-               <button onclick="onClick()">
+               <button class="btn btn-default" onclick="onClick()">
                  <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                </button>
-               <button onclick="onPreview()">
+               <button class="btn btn-default" onclick="onPreview()">
                  <span class="glyphicon glyphicon-new-window " aria-hidden="true"></span>
                </button><br/>
                <span id="filePath"></span><br/>
