--- a/www/index.html
+++ b/www/index.html
@@ -170,9 +170,9 @@
                 <p class="event received">DEVICE READY</p>
             </div>
             <div id="editPanel" class="editPanel">
-               <button onclick="getContent('www/index.html')">HTML</button>
-               <button onclick="getContent('www/css/index.css')">CSS</button>
-               <button onclick="getContent('www/js/index.js')">JS</button><br/>
+               <button class="btn btn-primary" onclick="getContent('www/index.html')">HTML</button>
+               <button class="btn btn-warning" onclick="getContent('www/css/index.css')">CSS</button>
+               <button class="btn btn-danger" onclick="getContent('www/js/index.js')">JS</button><br/>
                <button class="btn btn-default" onclick="getContent('www/config.xml')">
                  <span class="glyphicon glyphicon-wrench " aria-hidden="true"></span>
                </button>
