Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -172,7 +172,7 @@
             <div id="editPanel" class="editPanel">
                <button class="btn btn-primary" onclick="getContent('www/index.html')">HTML</button>
                <button class="btn btn-warning" onclick="getContent('www/css/index.css')">CSS</button>
-               <button class="btn btn-danger" onclick="getContent('www/js/index.js')">JS</button><br/>
+               <button class="btn btn-danger" onclick="getContent('www/js/index.js')">JS</button>
                <button class="btn btn-default" onclick="getContent('www/config.xml')">
                  <span class="glyphicon glyphicon-wrench " aria-hidden="true"></span>
                </button>
