--- a/www/index.html
+++ b/www/index.html
@@ -173,6 +173,7 @@
                <button class="btn btn-primary" onclick="getContent('www/index.html')">HTML</button>
                <button class="btn btn-warning" onclick="getContent('www/css/index.css')">CSS</button>
                <button class="btn btn-danger" onclick="getContent('www/js/index.js')">JS</button>
+               <button class="btn btn-danger" onclick="getContent('www/js/tools.js')">Tools</button>
                <button class="btn btn-default" onclick="getContent('www/config.xml')">
                  <span class="glyphicon glyphicon-wrench " aria-hidden="true"></span>
                </button>
