Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -25,16 +25,16 @@
                <span id="filePath"></span><br/>
                <span id="fileSha"></span><br/>
                <textarea class="codeArea" id="codeArea" rows="17"></textarea><br/>
-               <button class="btn btn-default btn-lg" onclick="getContent('www/config.xml')">
+               <button class="btn btn-info btn-lg" onclick="getContent('www/config.xml')">
                  <span class="glyphicon glyphicon-wrench " aria-hidden="true"></span>
                </button>
-               <button class="btn btn-default btn-lg" onclick="updateContent()">
+               <button class="btn btn-warning btn-lg" onclick="updateContent()">
                  <span class="glyphicon glyphicon-save " aria-hidden="true"></span>
                </button>
-               <button class="btn btn-default btn-lg" onclick="onClick()">
+               <button class="btn btn-danger  btn-lg" onclick="onClick()">
                  <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                </button>
-               <button class="btn btn-default btn-lg" onclick="onPreview()">
+               <button class="btn btn-success  btn-lg" onclick="onPreview()">
                  <span class="glyphicon glyphicon-new-window " aria-hidden="true"></span>
                </button>
             </div>
