--- a/www/index.html
+++ b/www/index.html
@@ -17,10 +17,10 @@
                 <p class="event received">DEVICE READY</p>
             </div>
             <div id="editPanel" class="editPanel">
-               <button class="btn btn-primary" onclick="getContent('www/index.html')">HTML</button>
-               <button class="btn btn-warning" onclick="getContent('www/css/index.css')">CSS</button>
-               <button class="btn btn-danger" onclick="getContent('www/js/index.js')">JS</button>
-               <button class="btn btn-danger" onclick="getContent('www/js/tools.js')">Tools</button>
+               <button class="btn btn-default" onclick="getContent('www/index.html')">HTML</button>
+               <button class="btn btn-default" onclick="getContent('www/css/index.css')">CSS</button>
+               <button class="btn btn-default" onclick="getContent('www/js/index.js')">JS</button>
+               <button class="btn btn-default" onclick="getContent('www/js/tools.js')">Tools</button>
                <br/>
                <span id="filePath"></span><br/>
                <span id="fileSha"></span><br/>
