--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@
                     <h4 class="modal-title" id="myModalLabel">Modal title</h4>
                   </div>
                   <div class="modal-body">
-                    ...
+                    Hola
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
