--- a/www/index.html
+++ b/www/index.html
@@ -41,22 +41,17 @@
             </div>
             <div id="runPanel">
                 <input id="cmdInput"></input>
-                <button class="btn btn-success" onclick="doProcess()">Process</button>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-               Launch demo modal
-            </button>
-
+                <button class="btn btn-success" onclick="doProcess()" data-toggle="modal" data-target="#myModal>Process</button>
             <!-- Modal -->
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                    <h4 class="modal-title" id="myModalLabel">Add button</h4>
                   </div>
                   <div class="modal-body">
-                    Hola
+                    Parameters:
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
