--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
             </div>
             <div id="runPanel">
                 <input id="cmdInput"></input>
-                <button class="btn btn-success" onclick="doProcess()" data-toggle="modal" data-target="#myModal>Process</button>
+                <button class="btn btn-success" onclick="doProcess()" data-toggle="modal" data-target="#myModal">Process</button>
             <!-- Modal -->
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
               <div class="modal-dialog" role="document">
