--- a/www/index.html
+++ b/www/index.html
@@ -54,8 +54,8 @@
                     Parameters:
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-success">Create</button>
                   </div>
                 </div>
               </div>
