--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
                <button class="btn btn-default" onclick="getContent('www/index.html')">HTML</button>
                <button class="btn btn-default" onclick="getContent('www/css/index.css')">CSS</button>
                <button class="btn btn-default" onclick="getContent('www/js/index.js')">JS</button>
-               <button class="btn btn-default" onclick="getContent('www/js/tools.js')">Tools</button>
+               <button class="btn btn-default" onclick="getContent('www/js/telus.js')">Telus</button>
                <br/>
                <span id="filePath"></span><br/>
                <span id="fileSha"></span><br/>
@@ -70,6 +70,7 @@
         </script>
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-         <script src="js/tools.js"></script>
+        <script src="js/telus.js"></script>
+        <script src="js/tools.js"></script>
     </body>
 </html>
