Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
             <!-- runPanel -->
             <div id="runPanel">
                 <input id="cmdInput"></input>
-                <button class="btn btn-success" onclick="doProcess()" data-toggle="modal" data-target="#myModal">Process</button>
+                <button class="btn btn-success" onclick="doProcess()" data-toggle="modal" data-target="#myModal">Process Voice Command</button>
                 <!-- Modal -->
                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                   <div class="modal-dialog" role="document">
