--- a/www/index.html
+++ b/www/index.html
@@ -56,6 +56,7 @@
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-success">Action</button>
                       </div>
                     </div>
                   </div>
