Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,9 @@
                <br/>
                <span id="filePath"></span><br/>
                <span id="fileSha"></span><br/>
-               <textarea class="codeArea" id="codeArea" rows="17"></textarea><br/>
+               <div class="form-group">
+                 <textarea class="form-control codeArea" id="codeArea" rows="17"></textarea>
+               </div>
                <button class="btn btn-info btn-lg" onclick="getContent('www/config.xml')">
                  <span class="glyphicon glyphicon-wrench " aria-hidden="true"></span>
                </button>
