Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -17,13 +17,13 @@
                 <p class="event received">DEVICE READY</p>
             </div>
             <div id="editPanel" class="editPanel">
+               <span id="filePath"></span>          
                <br/>
                <button class="btn btn-default" onclick="getContent('www/index.html')">HTML</button>
                <button class="btn btn-default" onclick="getContent('www/css/index.css')">CSS</button>
                <button class="btn btn-default" onclick="getContent('www/js/index.js')">JS</button>
                <button class="btn btn-default" onclick="getContent('www/js/telus.js')">Telus</button>
                <br/>
-               <span id="filePath"></span><br/>
                <span id="fileSha"></span><br/>
                <div class="form-group">
                  <textarea class="form-control codeArea" id="codeArea" rows="15"></textarea>
