--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="app2">
-            <h1>Telus what you want <button class="btn btn-primary" id="editBtn" onclick="goEdit ()">Edit</button></h1>
+            <h1>Github Simple Commit <button class="btn btn-primary" id="editBtn" onclick="goEdit ()">Edit</button></h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">NO CONNECTED TO DEVICE</p>
                 <p class="event received">DEVICE READY</p>
